--- a/style.css
+++ b/style.css
@@ -1,20 +1,37 @@
 *{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 12px;
+    margin:0;
+    padding:0;
+}
+
+body{
     background-color: beige;
 }
 
-.header{
+
+h1{
     font-size: 26px;
     color:darkgreen;
     text-align: center;
     text-decoration-line: underline;
 }
 
-.subheader{
+h3{
     color:darkgreen;
     font-size: 18px;
     text-align:center;
+    margin:5px;
+}
+
+.recipe-card{
+    width: 400px;
+    text-align: center;
+    background-color: #FFFAFA;
+    margin: 30px auto;
+    padding: 10px 20px 10px 20px;
+    height:100dvh;
+    box-shadow: 1px 1px 4px rgba(0, 0, 0, .5); 
 }
 
 .recipe-links{
@@ -37,16 +54,13 @@
 }
 
 .recipe-description{
-  line-height: 8.5px;  
+  line-height: 15px;  
   text-align: center;
-}
-
-.container{
-    text-align:center;
+  margin-bottom: 8px;
 }
 
 ul.ingredient-list, ol.cooking-list{
     display:inline-block;
     text-align: left;
-
+    line-height: 20px;
 }
