--- a/style.css
+++ b/style.css
@@ -3,35 +3,39 @@
     font-size: 12px;
     margin:0;
     padding:0;
+    box-sizing: border-box;
 }
 
 body{
-    background-color: beige;
+    background-color:rgb(208, 208, 208);
 }
 
 
 h1{
     font-size: 26px;
     color:darkgreen;
-    text-align: center;
     text-decoration-line: underline;
+    margin-bottom: 10px;
 }
 
 h3{
     color:darkgreen;
     font-size: 18px;
-    text-align:center;
     margin:5px;
 }
 
 .recipe-card{
-    width: 400px;
-    text-align: center;
-    background-color: #FFFAFA;
-    margin: 30px auto;
-    padding: 10px 20px 10px 20px;
-    height:100dvh;
-    box-shadow: 1px 1px 4px rgba(0, 0, 0, .5); 
+    width: 1000px;
+    background-color:rgb(229, 229, 229);
+    padding:30px;
+    vertical-align: top;
+    margin:auto;
+    border:2px solid black;
+}
+
+.recipe-content{
+    display:inline-block;
+    width:400px;
 }
 
 .recipe-links{
@@ -45,17 +49,21 @@ h3{
     margin-right: 10px;
 }
 
-.image-header{
+.recipe-content{
+    padding: 20px;
+    display: inline-block;
+    width: 450px;
+    vertical-align: top;
+}
+
+img{
     height:auto;
-    width:300px;
-    display:block;
-    margin-left:auto;
-    margin-right:auto;
+    width:400px;
+    display:inline-block;
 }
 
 .recipe-description{
   line-height: 15px;  
-  text-align: center;
   margin-bottom: 8px;
 }
 
@@ -63,4 +71,12 @@ ul.ingredient-list, ol.cooking-list{
     display:inline-block;
     text-align: left;
     line-height: 20px;
+}
+
+ul{
+    list-style-type: none;
+}
+
+ol{
+    margin-left:15px;
 }
